# kingdom-api

./: .gitignore  README.rst  example.env  example.testenv  pyproject.toml  tox.ini
kingdom_api/: app.py  celery_app.py  config.py  extensions.py  manage.py  wsgi.py
kingdom_api/admin/: __init__.py  views.py
kingdom_api/api/: __init__.py  views.py
kingdom_api/api/resources/: __init__.py  game.py  state.py  user.py
kingdom_api/api/schemas/: __init__.py  game.py  input.py  state.py  user.py
kingdom_api/auth/: __init__.py  helpers.py  views.py
kingdom_api/commons/: apispec.py
kingdom_api/commons/templates/: swagger.j2
kingdom_api/config/: game_settings.yml
kingdom_api/models/: __init__.py  blacklist.py  game.py  role.py  settings.py  state.py  user.py
kingdom_api/services/: settings.py  state.py
kingdom_api/tasks/: example.py
migrations/versions/: 35e017b3e748_.py  7f9dd2471f2b_initial_migration.py  b77513521f3d_.py
tests/: conftest.py  factories.py  test_celery.py  test_kingdom_api.py  test_state.py  test_state_service.py  test_user.py
